Add freemarker reports.